<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_activity_gray"
    android:orientation="vertical" >

    <!-- 评价 -->

    <LinearLayout
        android:id="@+id/ll_all"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/layer_white_stroke_top_bot_deep"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp" >

            <ImageView
                android:layout_width="@dimen/ic_size_home_recommend"
                android:layout_height="@dimen/ic_size_home_recommend"
                android:scaleType="centerInside"
                android:src="@drawable/ic_comment" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:gravity="center_vertical"
                android:text="@string/evaluation"
                android:textColor="@color/text_home_recommend"
                android:textSize="@dimen/text_size_home_recommend_title" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/stroke" />

        <LinearLayout
            android:id="@+id/ll_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_more_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_white_gray"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/stroke" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:ellipsize="end"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/see_all_comment"
                android:textColor="@color/main_color"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_comment"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_white_gray_stroke_top_bot_deep"
        android:ellipsize="end"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/i_want_comment"
        android:textColor="@color/main_color"
        android:textSize="12sp" />

</LinearLayout>