<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_activity_gray"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <!-- 顶部 -->

            <LinearLayout
                android:id="@+id/ll_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="10dp" >

                <com.fanwe.library.customview.SDScaleImageView
                    android:id="@+id/act_my_coupon_detail_iv_coupon_image"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/act_my_coupon_detail_tv_coupon_brief"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:lineSpacingExtra="4dp"
                    android:textColor="@color/text_item_content"
                    android:textSize="@dimen/text_size_item_content" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/stroke_deep" />

            <!-- 中间 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="horizontal"
                    android:padding="10dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tuan_gou_coupon_code"
                        android:textColor="@color/text_home_recommend"
                        android:textSize="@dimen/text_size_home_recommend_title" />

                    <TextView
                        style="@style/text_item_content"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:text="有效期至：" />

                    <TextView
                        android:id="@+id/act_my_coupon_detail_tv_coupon_limit_time"
                        style="@style/text_item_content"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/stroke" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:padding="10dp" >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/text_item_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="密码：" />

                        <TextView
                            android:id="@+id/act_my_coupon_detail_tv_coupon_code"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/text_home_recommend"
                            android:textSize="@dimen/text_size_home_recommend_title" />
                    </LinearLayout>

                    <com.fanwe.library.customview.SDScaleImageView
                        android:id="@+id/act_my_coupon_detail_iv_coupon_code_image"
                        android:layout_width="120dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/stroke_deep" />

            <!-- 底部 -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:orientation="horizontal"
                    android:padding="10dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/suppliers_introduction"
                        android:textColor="@color/text_home_recommend"
                        android:textSize="@dimen/text_size_home_recommend_title" />
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1px"
                    android:background="@color/stroke" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:padding="10dp" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/white"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/text_item_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/suppliers_name_colon" />

                        <TextView
                            android:id="@+id/act_my_coupon_detail_tv_merchant_name"
                            style="@style/text_item_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/white"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/text_item_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/suppliers_phone_colon" />

                        <TextView
                            android:id="@+id/act_my_coupon_detail_tv_merchant_mobile"
                            style="@style/text_item_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@android:color/white"
                        android:orientation="horizontal" >

                        <TextView
                            style="@style/text_item_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/suppliers_address_colon" />

                        <TextView
                            android:id="@+id/act_my_coupon_detail_tv_merchant_address"
                            style="@style/text_item_content"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/stroke_deep" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>